Join, leave messages; Console commands via rcon

--- a/config.example.ini
+++ b/config.example.ini
@@ -12,4 +12,5 @@ bot-token = token
 webhook-url = https://discord.com/api/webhooks/.../...
 chat-channel = 0000000000000000000 
 console-channel = 0000000000000000000
-
+server-name = My Server
+server-pfp = https://example.org/image.png
