--- a/netherrack.cabal
+++ b/netherrack.cabal
@@ -53,6 +53,7 @@ library
     , bytestring
     , config-ini
     , discord-haskell
+    , emojis
     , fsnotify
     , http-conduit
     , lens
@@ -88,6 +89,7 @@ executable netherrack-exe
     , bytestring
     , config-ini
     , discord-haskell
+    , emojis
     , fsnotify
     , http-conduit
     , lens
@@ -125,6 +127,7 @@ test-suite netherrack-test
     , bytestring
     , config-ini
     , discord-haskell
+    , emojis
     , fsnotify
     , http-conduit
     , lens
